syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ylink.demo.grpc";
option java_outer_classname = "RpcbffProto";

package pb;

import "google/protobuf/struct.proto";

enum ConnectType{
  PLAYER = 0;
  CS = 1;
}

message CommandReq {
  ConnectType type = 1;
  string access_token = 2;
}

message CommandResp {
  int64 code = 1;
  string  msg = 2;
  google.protobuf.Struct data = 3;
}

service Rpcbff {
  rpc connect(CommandReq) returns (stream CommandResp);
  rpc disconnect(CommandReq) returns (CommandResp);
}